--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Shopping List</h1>
+	<h1>Basket List</h1>
 	<p id="first">Get it done by today</p>
 	<input id="inputtext" type="text" name="search" placeholder="add items">
 	<button id="enter">click me!!</button>
