--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Basket List</h1>
-	<p id="first">Get it done by today</p>
+	<p id="first">This is great.</p>
 	<input id="inputtext" type="text" name="search" placeholder="add items">
 	<button id="enter">click me!!</button>
 	<ul>
